--- a/src/components/burger/buildControls/buildControl/buildControl.module.css
+++ b/src/components/burger/buildControls/buildControl/buildControl.module.css
@@ -11,7 +11,7 @@
   padding: 5px;
   margin: 0 5px;
   width: 96px;
-  border: 1px solid #aa6817;
+  border: 1px solid #c15711;
   outline: none;
 }
 .build-control button:hover {
@@ -34,7 +34,7 @@
 .label {
   padding: 10px;
   font-weight: bold;
-  min-width: 80px;
+  width: 96px;
 }
 
 .build-control .remove {
