--- a/src/components/burger/burger.module.css
+++ b/src/components/burger/burger.module.css
@@ -28,21 +28,21 @@
   background: #555;
 }
 
-@media screen and (min-width: 1000px) and (min-height: 700px) {
+@media only screen and (min-width: 1000px) and (min-height: 700px) {
   .burger {
     max-width: 700px;
     height: 600px;
   }
 }
 
-@media screen and (min-width: 500px) and (min-height: 401px) {
+@media only screen and (min-width: 500px) and (min-height: 401px) {
   .burger {
     max-width: 450px;
     height: 400px;
   }
 }
 
-@media screen and (min-width: 500px) and (max-height: 400px) {
+@media only screen and (min-width: 500px) and (max-height: 400px) {
   .burger {
     max-width: 350px;
     height: 300px;
