--- a/src/components/burger/burgerIngredients/burgerIngredients.module.css
+++ b/src/components/burger/burgerIngredients/burgerIngredients.module.css
@@ -11,8 +11,7 @@
   height: 20%;
   width: 80%;
   background-color: transparent;
-  border-radius: 100% 100% 0 0;
-  margin: 0.8% auto;
+  margin: calc(0.8% + 1px) auto;
   position: relative;
   overflow: hidden;
 }
