--- a/src/components/ui/modal/modal.module.css
+++ b/src/components/ui/modal/modal.module.css
@@ -1,14 +1,16 @@
 .modal {
   position: fixed;
-  z-index: 999;
-  background-color: #cfd2cf;
-  color: var(--default-bg-color);
-  width: 70%;
-  border: 1px solid #ccc;
-  box-shadow: 1px 1px 1px black;
-  padding: 16px;
-  left: 15%;
-  top: 30%;
+  z-index: 110;
+  background-color: var(--header-color);
+  color: #181818;
+  width: 80%;
+  border: 1px solid #eee;
+  box-shadow: 1px 1px 2px #181818;
+  padding: 1rem;
+  margin-inline: auto;
+  left: 0;
+  right: 0;
+  top: 17.5%;
   box-sizing: border-box;
   transition: all 0.3s ease-out;
 }
@@ -16,6 +18,6 @@
 @media only screen and (min-width: 600px) {
   .modal {
     width: 500px;
-    left: calc(50% - 250px);
+    top: 20%;
   }
 }
