--- a/src/components/burger/buildControls/buildControls.module.css
+++ b/src/components/burger/buildControls/buildControls.module.css
@@ -9,10 +9,10 @@
 }
 
 .current-price {
+  color: #181818;
   background-color: var(--header-color);
   padding: 16px 12px;
   width: max-content;
-  color: var(--default-bg-color);
 }
 
 .order-button {
