--- a/src/components/logo/logo.module.css
+++ b/src/components/logo/logo.module.css
@@ -2,10 +2,6 @@
   background-color: #967e76;
   padding: 8px;
   height: 100%;
-  width: max-content;
+  /* width: max-content; */
   border-radius: 5px;
-}
-
-.logo img {
-  height: 100%;
 }
