--- a/src/components/navigation/navigationItems/navigationItem/navigationItem.module.css
+++ b/src/components/navigation/navigationItems/navigationItem/navigationItem.module.css
@@ -1,13 +1,8 @@
-.navigation-item {
-  width: 100%;
-  margin: 12px 0;
-}
-
 .navigation-item a {
-  display: block;
-  color: var(--default-bg-color);
+  color: #181818;
   text-decoration: none;
-  width: 100%;
+  padding: 10px 14px;
+  border: 2px solid #00000000;
 }
 
 .navigation-item a:hover,
@@ -16,26 +11,12 @@
   color: dodgerblue;
 }
 
-@media only screen and (min-width: 500px) {
-  .navigation-item {
-    height: 100%;
-    width: auto;
-    display: flex;
-    align-items: center;
-  }
-
-  .navigation-item a {
-    color: inherit;
-    height: 100%;
-    padding: 16px 10px;
-    border-bottom: 2px solid transparent;
-  }
-
+@media only screen and (min-width: 625px) {
   .navigation-item a:hover,
   .navigation-item a:active,
   .navigation-item a.active {
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: #00000033;
     border-bottom-color: dodgerblue;
-    color: var(--default-text-color);
+    color: #181818;
   }
 }
