--- a/src/components/navigation/sideDrawer/drawerToggle/drawerToggle.module.css
+++ b/src/components/navigation/sideDrawer/drawerToggle/drawerToggle.module.css
@@ -1,63 +1,53 @@
-.drawer-toggle-wrapper {
-  width: 48px;
-  height: 100%;
+.drawer-toggle {
+  background-color: unset;
+  border: unset;
+  width: 32px;
+  aspect-ratio: 1 / 1;
   display: grid;
   place-items: center;
 }
 
-.drawer-toggle {
-  width: 66.66%;
-  height: 2px;
+.bar {
+  width: 100%;
+  background-color: #121212;
+  height: 3px;
+  border-radius: 1em;
   position: relative;
-  background-color: var(--default-bg-color);
+  transition: transform 0.3s ease-in-out;
 }
 
-.drawer-toggle::before {
-  content: '';
+.bar::before,
+.bar::after {
+  content: "";
   position: absolute;
   width: 100%;
   height: 100%;
-  bottom: 8px;
-  left: 0;
+  inset: -266.66667% auto auto 0;
   background-color: inherit;
+  border-radius: inherit;
+  transition: inherit;
 }
 
-.drawer-toggle::after {
-  content: '';
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 8px;
-  left: 0;
-  background-color: inherit;
+.bar::after {
+  inset: auto 0 -266.66667% auto;
 }
 
-.drawer-toggle-wrapper.open {
-  position: absolute;
-  top: 1rem;
-  right: 1rem;
-  transform: rotate(270deg);
-  transition: 0.5s ease;
-}
-
-.drawer-toggle.open {
+.drawer-toggle.open .bar {
   transform: rotate(45deg);
   background-color: #f57328;
-  transition: all 0.3s ease-in-out;
 }
 
-.drawer-toggle.open::before {
-  display: none;
-}
-
-.drawer-toggle.open::after {
-  top: 0;
+.drawer-toggle.open .bar::before {
   transform: rotate(-90deg);
-  background-color: inherit;
+  top: 0;
 }
 
-@media only screen and (min-width: 600px) {
-  .drawer-toggle-wrapper {
+.drawer-toggle.open .bar::after {
+  content: none;
+}
+
+@media only screen and (min-width: 625px) {
+  .drawer-toggle {
     display: none;
   }
 }
