--- a/src/components/navigation/toolbar/toolbar.module.css
+++ b/src/components/navigation/toolbar/toolbar.module.css
@@ -1,27 +1,21 @@
 .toolbar {
-  height: 56px;
-  width: 100%;
+  height: 80px;
   position: fixed;
-  top: 0;
-  left: 0;
+  inset: 0 0 auto 0;
   background-color: var(--header-color);
-  color: var(--default-bg-color);
+  color: #181818;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 20px;
+  padding: 16px 24px;
   z-index: 77;
 }
 
-.toolbar nav {
-  height: 100%;
-}
-
 .logo {
-  height: 90%;
+  max-width: 48px;
 }
 
-@media only screen and (max-width: 499px) {
+@media only screen and (max-width: 625px) {
   .desktop-only {
     display: none;
   }
