--- a/src/components/ui/backdrop/backdrop.module.css
+++ b/src/components/ui/backdrop/backdrop.module.css
@@ -1,9 +1,16 @@
 .back-drop {
-  width: calc(100% + 2px);
-  height: 100%;
+  background-color: #00000022;
   position: fixed;
+  inset: 0;
   z-index: 88;
-  top: 0;
-  left: 0;
-  background-color: hsla(0, 0%, 0%, 0.75);
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  justify-content: center;
+  transition: opacity 0.2s ease-in-out;
+  opacity: 0;
+}
+
+.fade-in {
+  opacity: 1;
 }
