--- a/src/components/ui/button/button.module.css
+++ b/src/components/ui/button/button.module.css
@@ -1,18 +1,12 @@
 .button {
-  background-color: transparent;
+  background-color: unset;
   border: none;
   color: white;
   outline: none;
   cursor: pointer;
-  font: inherit;
   padding: 10px;
   margin: 10px;
   font-weight: bold;
-}
-
-.button:first-of-type {
-  margin-left: 0;
-  padding-left: 0;
 }
 
 .success {
