--- a/src/components/ui/spinner/spinner.module.css
+++ b/src/components/ui/spinner/spinner.module.css
@@ -1,41 +1,30 @@
-.loader,
-.loader:after {
-  border-radius: 50%;
-  width: 10em;
-  height: 10em;
-}
 .loader {
-  margin: 60px auto;
-  font-size: 10px;
-  position: relative;
-  text-indent: -9999em;
-  border-top: 1.1em solid rgba(24, 24, 24, 0.2);
-  border-right: 1.1em solid rgba(24, 24, 24, 0.2);
-  border-bottom: 1.1em solid rgba(24, 24, 24, 0.2);
-  border-left: 1.1em solid #181818;
-  -webkit-transform: translateZ(0);
-  -ms-transform: translateZ(0);
-  transform: translateZ(0);
-  -webkit-animation: load8 1.1s infinite linear;
-  animation: load8 1.1s infinite linear;
+  width: 6em;
+  height: 6em;
+  padding: 1em;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  translate: -50% -50%;
+  background-image: conic-gradient(#00000000 30%, currentColor 70%);
+  border-radius: 50%;
+  animation: spin 1s infinite linear;
 }
-@-webkit-keyframes load8 {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
+
+.loader::after {
+  content: "";
+  position: absolute;
+  z-index: 99;
+  inset: 1em;
+  border-radius: 50%;
+  background-color: #fff;
 }
-@keyframes load8 {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
+
+@keyframes spin {
+  from {
+    transform: rotate(0);
   }
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
+  to {
+    transform: rotate(1turn);
   }
 }
