--- a/src/components/burger/burger-ingredient/burger-ingredient.module.css
+++ b/src/components/burger/burger-ingredient/burger-ingredient.module.css
@@ -4,14 +4,14 @@
   background-image: linear-gradient(#bc581e, #e27b36);
   border-radius: 0 0 48px 48px;
   box-shadow: inset -15px 0 #c15711;
-  margin: 0.8% auto;
+  margin: 0.75% auto;
 }
 
 .bread-top {
   height: 20%;
   width: 80%;
   background-color: transparent;
-  margin: calc(0.8% + 1px) auto;
+  margin: calc(0.75% + 1px) auto;
   position: relative;
   overflow: hidden;
 }
@@ -37,7 +37,7 @@
   top: 40%;
   border-radius: 40%;
   transform: rotate(-20deg);
-  box-shadow: inset -2px -3px #cabc83;
+  /* box-shadow: inset -2px -3px #cabc83; */
 }
 
 .seeds1::before {
@@ -50,7 +50,7 @@
   top: -50%;
   border-radius: 40%;
   transform: rotate(60deg);
-  box-shadow: inset -1px 2px #cabc83;
+  /* box-shadow: inset -1px 2px #cabc83; */
 }
 
 .seeds1::after {
@@ -63,7 +63,7 @@
   top: 0%;
   border-radius: 40%;
   transform: rotate(60deg);
-  box-shadow: inset -1px -3px #cabc83;
+  /* box-shadow: inset -1px -3px #cabc83; */
 }
 
 .seeds2 {
@@ -75,7 +75,7 @@
   top: 45%;
   border-radius: 40%;
   transform: rotate(-25deg);
-  box-shadow: inset -3px 0 #cabc83;
+  /* box-shadow: inset -3px 0 #cabc83; */
 }
 
 .seeds2::before {
@@ -88,7 +88,7 @@
   top: -180%;
   border-radius: 40%;
   transform: rotate(215deg);
-  box-shadow: inset 1px 3px #cabc83;
+  /* box-shadow: inset 1px 3px #cabc83; */
 }
 
 .seeds2::after {
@@ -101,7 +101,7 @@
   top: 200%;
   border-radius: 40%;
   transform: rotate(240deg);
-  box-shadow: inset 1px 3px #cabc83;
+  /* box-shadow: inset 1px 3px #cabc83; */
 }
 
 .seeds3 {
@@ -113,7 +113,7 @@
   top: 15%;
   border-radius: 40%;
   transform: rotate(-20deg);
-  box-shadow: inset -2px -3px #cabc83;
+  /* box-shadow: inset -2px -3px #cabc83; */
 }
 
 .seeds3::before {
@@ -126,7 +126,7 @@
   top: -125%;
   border-radius: 40%;
   transform: rotate(75deg);
-  box-shadow: inset -1px 2px #cabc83;
+  /* box-shadow: inset -1px 2px #cabc83; */
 }
 
 .seeds3::after {
@@ -139,7 +139,7 @@
   top: 300%;
   border-radius: 40%;
   transform: rotate(-15deg);
-  box-shadow: inset -1px -3px #cabc83;
+  /* box-shadow: inset -1px -3px #cabc83; */
 }
 
 .seeds4 {
@@ -151,7 +151,7 @@
   top: 20%;
   border-radius: 40%;
   transform: rotate(-140deg);
-  box-shadow: inset -3px 0 #cabc83;
+  /* box-shadow: inset -3px 0 #cabc83; */
 }
 
 .seeds4::before {
@@ -164,7 +164,7 @@
   top: 0;
   border-radius: 40%;
   transform: rotate(120deg);
-  box-shadow: inset 1px 3px #cabc83;
+  /* box-shadow: inset 1px 3px #cabc83; */
 }
 
 .seeds4::after {
@@ -177,14 +177,14 @@
   top: 60%;
   border-radius: 40%;
   transform: rotate(90deg);
-  box-shadow: inset 1px 3px #cabc83;
+  /* box-shadow: inset 1px 3px #cabc83; */
 }
 
 .patty {
   width: 80%;
   height: 8%;
   background: linear-gradient(#7f3608, #702e05);
-  margin: 0.8% auto;
+  margin: 0.75% auto;
   border-radius: 15px;
 }
 
@@ -192,14 +192,14 @@
   width: 75%;
   height: 4%;
   background: linear-gradient(to right, #ff6347, #e44226);
-  margin: 0.8% auto;
+  margin: 0.75% auto;
   border-radius: 5px;
 }
 
 .cheese {
   width: 87.5%;
   height: 1%;
-  margin: 0.8% auto;
+  margin: 0.75% auto;
   background: linear-gradient(#f4d004, #d6bb22);
   border-radius: 2px;
 }
@@ -207,7 +207,7 @@
 .pickles {
   width: 35%;
   height: 3%;
-  margin: 0.8% auto;
+  margin: 0.75% auto;
   background-image: linear-gradient(to top right, #556e3c, #284400);
   box-shadow: inset 2px 1px #303622;
   border-radius: 3px;
@@ -244,7 +244,7 @@
 .onion-rings {
   width: 85%;
   height: 1.75%;
-  margin: 0.8% auto;
+  margin: 0.75% auto;
   background: linear-gradient(to left, #a05c92, #c599bc, #e8d8e5);
   border-radius: 2px;
 }
@@ -252,7 +252,7 @@
 .lettuce {
   width: 85%;
   height: 1.5%;
-  margin: 0.8% auto;
+  margin: 0.75% auto;
   background: linear-gradient(#228c1d, #91ce50);
   border-radius: 20px;
 }
@@ -261,5 +261,5 @@
   width: 82.5%;
   height: 3%;
   background: linear-gradient(#bf3813, #c45e38);
-  margin: 0.8% auto;
+  margin: 0.75% auto;
 }
