--- a/src/components/navigation/navigation-items/navigation-items.module.css
+++ b/src/components/navigation/navigation-items/navigation-items.module.css
@@ -2,11 +2,14 @@
   list-style-type: none;
   display: flex;
   flex-flow: column nowrap;
-  align-items: center;
+  align-items: stretch;
+  justify-content: flex-start;
+  gap: 0.5em;
 }
 
 @media only screen and (min-width: 768px) {
   .navigation-items {
     flex-flow: row nowrap;
+    gap: 0.125em;
   }
 }
