--- a/src/components/burger/burger-ingredient/burger-ingredient.module.css
+++ b/src/components/burger/burger-ingredient/burger-ingredient.module.css
@@ -1,17 +1,15 @@
 .bread-bottom {
-  height: 13%;
+  min-height: 13%;
   width: 80%;
   background-image: linear-gradient(#bc581e, #e27b36);
   border-radius: 0 0 48px 48px;
   box-shadow: inset -15px 0 #c15711;
-  margin: 0.75% auto;
 }
 
 .bread-top {
-  height: 20%;
+  min-height: 20%;
   width: 80%;
   background-color: transparent;
-  margin: calc(0.75% + 1px) auto;
   position: relative;
   overflow: hidden;
 }
@@ -19,7 +17,7 @@
 .bread-top::before {
   content: "";
   position: absolute;
-  height: 200%;
+  min-height: 200%;
   width: 100%;
   left: 0;
   top: 0;
@@ -30,7 +28,7 @@
 
 .seeds1 {
   width: 8%;
-  height: 12%;
+  min-height: 12%;
   position: absolute;
   background-color: #e0ba80;
   left: 15%;
@@ -43,7 +41,7 @@
 .seeds1::before {
   content: "";
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   position: absolute;
   background-color: #e0ba80;
   left: -125%;
@@ -56,7 +54,7 @@
 .seeds1::after {
   content: "";
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   position: absolute;
   background-color: #e0ba80;
   left: 125%;
@@ -68,7 +66,7 @@
 
 .seeds2 {
   width: 8%;
-  height: 12%;
+  min-height: 12%;
   position: absolute;
   background-color: #e0ba80;
   left: 35%;
@@ -81,7 +79,7 @@
 .seeds2::before {
   content: "";
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   position: absolute;
   background-color: #e0ba80;
   left: 45%;
@@ -94,7 +92,7 @@
 .seeds2::after {
   content: "";
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   position: absolute;
   background-color: #e0ba80;
   left: 150%;
@@ -106,7 +104,7 @@
 
 .seeds3 {
   width: 8%;
-  height: 12%;
+  min-height: 12%;
   position: absolute;
   background-color: #e0ba80;
   left: 60%;
@@ -119,7 +117,7 @@
 .seeds3::before {
   content: "";
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   position: absolute;
   background-color: #e0ba80;
   left: -100%;
@@ -132,7 +130,7 @@
 .seeds3::after {
   content: "";
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   position: absolute;
   background-color: #e0ba80;
   left: 50%;
@@ -144,7 +142,7 @@
 
 .seeds4 {
   width: 8%;
-  height: 12%;
+  min-height: 12%;
   position: absolute;
   background-color: #e0ba80;
   left: 75%;
@@ -157,7 +155,7 @@
 .seeds4::before {
   content: "";
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   position: absolute;
   background-color: #e0ba80;
   left: -115%;
@@ -170,7 +168,7 @@
 .seeds4::after {
   content: "";
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   position: absolute;
   background-color: #e0ba80;
   left: -200%;
@@ -182,32 +180,32 @@
 
 .patty {
   width: 80%;
-  height: 8%;
+  min-height: 8%;
   background: linear-gradient(#7f3608, #702e05);
-  margin: 0.75% auto;
+
   border-radius: 15px;
 }
 
 .tomato {
   width: 75%;
-  height: 4%;
+  min-height: 4%;
   background: linear-gradient(to right, #ff6347, #e44226);
-  margin: 0.75% auto;
+
   border-radius: 5px;
 }
 
 .cheese {
   width: 87.5%;
-  height: 1%;
-  margin: 0.75% auto;
+  min-height: 1%;
+
   background: linear-gradient(#f4d004, #d6bb22);
   border-radius: 2px;
 }
 
 .pickles {
   width: 35%;
-  height: 3%;
-  margin: 0.75% auto;
+  min-height: 3%;
+
   background-image: linear-gradient(to top right, #556e3c, #284400);
   box-shadow: inset 2px 1px #303622;
   border-radius: 3px;
@@ -219,7 +217,7 @@
   content: "";
   position: absolute;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   left: -70%;
   top: 0;
   transform: rotate(3.5deg) translateY(-4px);
@@ -232,7 +230,7 @@
   content: "";
   position: absolute;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   left: 70%;
   top: 0;
   transform: rotate(3.5deg) translateY(4px);
@@ -241,25 +239,24 @@
   border-radius: 2px;
 }
 
-.onion-rings {
+.onion-ring {
   width: 85%;
-  height: 1.75%;
-  margin: 0.75% auto;
+  min-height: 1.75%;
+
   background: linear-gradient(to left, #a05c92, #c599bc, #e8d8e5);
   border-radius: 2px;
 }
 
 .lettuce {
   width: 85%;
-  height: 1.5%;
-  margin: 0.75% auto;
+  min-height: 1.5%;
+
   background: linear-gradient(#228c1d, #91ce50);
   border-radius: 20px;
 }
 
 .bacon {
   width: 82.5%;
-  height: 3%;
+  min-height: 3%;
   background: linear-gradient(#bf3813, #c45e38);
-  margin: 0.75% auto;
 }
