--- a/src/components/burger/burger.module.css
+++ b/src/components/burger/burger.module.css
@@ -1,50 +1,26 @@
-.burger {
-  max-width: 100%;
+.burger-wrapper {
   margin-inline: auto;
-  height: 250px;
-  overflow: auto;
-  text-align: center;
-  font-weight: 700;
-  font-size: 1.2rem;
-  padding-left: 5px;
-}
-/* width */
-::-webkit-scrollbar {
-  width: 5px;
+  width: calc(100% - (var(--spacing) * 2));
+  aspect-ratio: 4 / 3;
+  overflow-y: auto;
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  justify-content: center;
+  gap: 1px;
 }
 
-/* Track */
-::-webkit-scrollbar-track {
-  background: #f1f1f1;
+.burger-wrapper p {
+  font-size: 1.25em;
+  font-weight: 200;
 }
 
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: #888;
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: #555;
-}
-
-@media only screen and (min-width: 1000px) and (min-height: 700px) {
-  .burger {
-    max-width: 700px;
-    height: 600px;
+@media only screen and (min-width: 768px) {
+  .burger-wrapper {
+    max-width: 425px;
   }
-}
 
-@media only screen and (min-width: 500px) and (min-height: 401px) {
-  .burger {
-    max-width: 450px;
-    height: 400px;
-  }
-}
-
-@media only screen and (min-width: 500px) and (max-height: 400px) {
-  .burger {
-    max-width: 350px;
-    height: 300px;
+  .burger-wrapper p {
+    font-size: 1.625em;
   }
 }
