--- a/src/components/navigation/toolbar/toolbar.module.css
+++ b/src/components/navigation/toolbar/toolbar.module.css
@@ -2,8 +2,8 @@
   height: 80px;
   position: fixed;
   inset: 0 0 auto 0;
-  background-color: var(--header-color);
-  color: #181818;
+  color: hsl(22, 73%, 40%);
+  background-color: #f57328;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -18,9 +18,5 @@
 @media only screen and (max-width: 768px) {
   .desktop-only {
     display: none;
-  }
-
-  .toolbar {
-    background-color: #f57328;
   }
 }
