--- a/src/components/ui/backdrop/backdrop.module.css
+++ b/src/components/ui/backdrop/backdrop.module.css
@@ -1,5 +1,5 @@
 .back-drop {
-  background-color: rgba(0 0 0 / 0.3);
+  background-color: #00000022;
   position: fixed;
   inset: 0;
   z-index: 88;
